--- a/index.html
+++ b/index.html
@@ -36,36 +36,93 @@
                 id="main-a" href="#">Shop</a></p>
     </div>
     <section id="main-pic">
-        <div class="div">
+        <div class="main-div">
             <h5>iPhone 16 Pro</h5>
             <p class="main-p">Hello, Apple Intelligence.</p>
             <button class="button">Learn more</button>
-            <button id="main-but-buy">Buy</button>
+            <button class="but-2">Buy</button>
         </div>
     </section>
     <section id="iphone16">
-        <div class="div">
+        <div class="main-div">
             <h5>iPhone 16</h5>
             <p class="main-p">Hello, Apple Intelligence.</p>
-            <button id="iphone16-but">Learn more</button>
-            <button id="iphone16-but-buy">Buy</button>
+            <button class="button iphone16-but">Learn more</button>
+            <button class="but-2 iphone16-but2">Buy</button>
         </div>
     </section>
+
     <section id="gift">
         <div id="gift-div">
-            <h6 id="gift-h6">Gift magic.</h6>
+            <h6 class="gift-h6">Gift magic.</h6>
             <p class="main-p">Make their holiday wish come true.</p>
             <button class="button">Shop gifts</button>
         </div>
     </section>
 
     <section id="sub-sect">
-        <div class="sub-sect-div" id="ipad"></div>
-        <div class="sub-sect-div"></div>
-        <div class="sub-sect-div"></div>
-        <div class="sub-sect-div"></div>
-        <div class="sub-sect-div"></div>
-        <div class="sub-sect-div" ></div>
+        <div class="sub-sect-div" id="ipad">
+            <div class="main-div">
+                <img class="ipad-air" src="assets/ipad-air.png" alt="">
+                <p class="ipad-p">Two sizes. Faster chip. Does it all.</p>
+                <button class="button">Learn more</button>
+                <button class="but-2">Buy</button>
+            </div>
+            <div class="ipad-hello">
+                <p class="ipad-air-hello">Hello, Apple Intelligence.</p>
+            </div>
+        </div>
+        <div class="sub-sect-div airpod aipods-pro-div">
+            <div class="main-div">
+                <h5 class="aipods-pro">AirPods Pro 2</h5>
+                <p class="ipad-p airpods-p">Now with a Hearing Aid feature.2</p>
+                <button class="button">Learn more</button>
+                <button class="but-2">Buy</button>
+            </div>
+        </div>
+        <div class="sub-sect-div watch">
+            <div class="main-div i-watch">
+                <img src="assets/apple-watch.png" alt="">
+                <p class="ipad-p">Thinstant classic.</p>
+                <button class="button">Learn more</button>
+                <button class="but-2">Buy</button>
+            </div>
+        </div>
+        <div class="sub-sect-div macbook">
+            <div class="main-div mac-div i-watch">
+                <h6 class="gift-h6">MacBook Air</h6>
+                <p class="ipad-p">Lean. Mean. M3 machine.</p>
+                <button class="button">Learn more</button>
+                <button class="but-2">Buy</button>
+            </div>
+        </div>
+        <div class="sub-sect-div trade-in">
+            <div class="main-div i-watch">
+                <img src="assets/trade.png" alt="">
+                <p class="ipad-p trade-p">Get $180–$650 in credit when you <br /> trade in iPhone 12 or higher.3
+                </p>
+                <button class="button">Get your estimate</button>
+            </div>
+        </div>
+        <div class="sub-sect-div card">
+            <div class="main-div i-watch">
+                <img src="assets/apple-card.png" alt="">
+                <p class="ipad-p trade-p">Get up to 3% Daily Cash back <br /> with every purchase.</p>
+                <button class="button">Learn more</button>
+                <button class="but-2">Apply now</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="apple-tv">
+        <div class="scroll-con">
+            <img class="fly-me" src="assets/fly-me.png" alt="">
+            <img class="fly-me" src="https://s3-alpha-sig.figma.com/img/a71f/a31c/036fa4ebdb97754279e6264a8511c26a?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=l4tA6XyG-JLP9roljLYJ7y9iFDzR6fC2-rWROw53RM-E5D6D-lhwrudVvTsRAYTKhSB7EJNMMkg5NSUsdUrdQ95~eaz11XdWQi63-cNrS9UzU1d4FB4LrmIr~F0BOIPaCe6HQNh6nOPy1LXTXmxc4GUeFE~6rLBjIFC~Y5AJqhqKjvv-tUqp6kFw0XkX0hdK7d1NZY3au0vzn1lClafUog4efKYi01hLdjRyitVrUNRJRswoS7hFhA8e0-M7DYb0CJvdaiV5Iw02dcwMjWugGd9OVinH2UXCuY8TgN9LqNGrxEtd~nUpZqZiwbEkvAecIiTfR72WnsQrfyeZnexMYg__" alt="">
+            <img class="fly-me" src="https://s3-alpha-sig.figma.com/img/db36/aaca/82598e5bda6c9c5f658e107bf65ba1d7?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=LXHwnKhAS88YoUTDyynxDpHtnvrTl5lC0wIKR1jHhebsHKBQyGCSxyD-kAVHBiiFP5pZkqNnG3xKxj-1yLkoMcUB4ffjoLo7C~3L8aJeDQoFLqNq6ydFXMmkGP36-mJ0-YqzEkZyJGBErg1z8bmsqia6tYBOErCJPZUXCXYs1TVnqFlLw6V1l38p~iznr~OMFwZ5g-Cqvv8Karx73CMF7560ybNMTRbXyUs2Lz6-K6KpwFwyvlmdfstT6Q4BqbbD467Eq0kPoVcPjBrXycz9I8RzQQosut6EVC1C5WYNsHMWdfQT3eZjyKuKqzODzEJby5Iye2KACWhi63GNHB5msQ__" alt="">
+            <img class="fly-me" src="https://s3-alpha-sig.figma.com/img/be41/7f8f/4a4fba5b07e121fa3629ad77ae6fc34e?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pikTEanZqvm4HwNmfP5E1o9bo3hyL5m42D0ld3WrEVLZ322gZ0dsGz9DmZqtQMjUCiDo~JdEObZWFGtd2XLB2bc7R12qckrugxt0WtQrClTX7fLBnAB7tVDcAMuwyvJvpntyIiUDvyZU6Ff4Zn~NKuermYrIa2GY7kcnQJMdg7wEXR-lAxIF0phE45gAzXRkJCTQVYED0aO2IcSErgO1XjzLsM9427Bj6TwbRRsDM-PHIcayA4Dh-ThLWfmohf21G3N62BvZWFGldun8Y06HkwgxGnlq3A5Y1eJ2CzTgA7lidNNABDwaJT9VNO~qZrZhrQoroJlb6JaGvAUPmSrI2w__" alt="">
+            <img src="https://s3-alpha-sig.figma.com/img/ea1a/5eff/645c361b0334116505e94e03c8d1133b?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PsGeSHGxClghwLDZas6J4WSSMj2I1djGqHD4D2niBvriWZuOWzUoHMNDRMLGzmaL4nRRJFvseX2E-KF9lceHQDcGrcJesW~arYXydmsaXvH7KtgdC-Wuu10VH~--rU9Ge4pjlGA9IAW8jG7vSOoefqDuCrRuEK~nsxWXlKYDowwELrZ6gLvMmjeyvQE3bwLUxq3kn087bGMCCzW6B4AgpzGx4XCy2P6bsKbmF1ZDO4uJDH2dDNljFTqRnQoH7weVc1Mvv7lmVOx8Tdc6vXxrEoyvnk7mznJi0hebAPtbnN0ueO55toyIMtr-vJ7XiDKvdl2xqWc41K6YvEYjw~drHA__" alt="">
+            <img src="https://s3-alpha-sig.figma.com/img/1d7f/d134/6c15ed8a600defaead1a38c16f4865b4?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Qw6RNFw9BnDB0SuZAl392MfzDoLXT~AKod4xGq-FDUvMjf31h1d61lkoZtbMtL90Ls-fH3EoSYDTUiqODvnlYhsY8hiDHxZWZWhi6SKN4-iYCIPEgiIqvrwG0JynKg9XDd6YeM3L3bWh48JLRLgDPkJ2euZSziOsWjEUbd5a0XZG6irmy7WWiIYrO50Zpc5dD7ugsMwjDjVR473o3ihig-eiCwMWzdRHE4H35dH3vCzRL9~l5FGDeN8e-KFldH9otuSzEO~TE5qJ3PjfbL-foe8J7n9DeVQ9jeardWeJdoW5XOptid~XlDHGC5hQy16GnieY-xYZNk6Ww9aQrfMQOQ__" alt="">
+        </div>
     </section>
 </body>
 
