--- a/index.html
+++ b/index.html
@@ -117,11 +117,41 @@
     <section class="apple-tv">
         <div class="scroll-con">
             <img class="fly-me" src="assets/fly-me.png" alt="">
-            <img class="fly-me" src="https://s3-alpha-sig.figma.com/img/a71f/a31c/036fa4ebdb97754279e6264a8511c26a?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=l4tA6XyG-JLP9roljLYJ7y9iFDzR6fC2-rWROw53RM-E5D6D-lhwrudVvTsRAYTKhSB7EJNMMkg5NSUsdUrdQ95~eaz11XdWQi63-cNrS9UzU1d4FB4LrmIr~F0BOIPaCe6HQNh6nOPy1LXTXmxc4GUeFE~6rLBjIFC~Y5AJqhqKjvv-tUqp6kFw0XkX0hdK7d1NZY3au0vzn1lClafUog4efKYi01hLdjRyitVrUNRJRswoS7hFhA8e0-M7DYb0CJvdaiV5Iw02dcwMjWugGd9OVinH2UXCuY8TgN9LqNGrxEtd~nUpZqZiwbEkvAecIiTfR72WnsQrfyeZnexMYg__" alt="">
-            <img class="fly-me" src="https://s3-alpha-sig.figma.com/img/db36/aaca/82598e5bda6c9c5f658e107bf65ba1d7?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=LXHwnKhAS88YoUTDyynxDpHtnvrTl5lC0wIKR1jHhebsHKBQyGCSxyD-kAVHBiiFP5pZkqNnG3xKxj-1yLkoMcUB4ffjoLo7C~3L8aJeDQoFLqNq6ydFXMmkGP36-mJ0-YqzEkZyJGBErg1z8bmsqia6tYBOErCJPZUXCXYs1TVnqFlLw6V1l38p~iznr~OMFwZ5g-Cqvv8Karx73CMF7560ybNMTRbXyUs2Lz6-K6KpwFwyvlmdfstT6Q4BqbbD467Eq0kPoVcPjBrXycz9I8RzQQosut6EVC1C5WYNsHMWdfQT3eZjyKuKqzODzEJby5Iye2KACWhi63GNHB5msQ__" alt="">
-            <img class="fly-me" src="https://s3-alpha-sig.figma.com/img/be41/7f8f/4a4fba5b07e121fa3629ad77ae6fc34e?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pikTEanZqvm4HwNmfP5E1o9bo3hyL5m42D0ld3WrEVLZ322gZ0dsGz9DmZqtQMjUCiDo~JdEObZWFGtd2XLB2bc7R12qckrugxt0WtQrClTX7fLBnAB7tVDcAMuwyvJvpntyIiUDvyZU6Ff4Zn~NKuermYrIa2GY7kcnQJMdg7wEXR-lAxIF0phE45gAzXRkJCTQVYED0aO2IcSErgO1XjzLsM9427Bj6TwbRRsDM-PHIcayA4Dh-ThLWfmohf21G3N62BvZWFGldun8Y06HkwgxGnlq3A5Y1eJ2CzTgA7lidNNABDwaJT9VNO~qZrZhrQoroJlb6JaGvAUPmSrI2w__" alt="">
-            <img src="https://s3-alpha-sig.figma.com/img/ea1a/5eff/645c361b0334116505e94e03c8d1133b?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PsGeSHGxClghwLDZas6J4WSSMj2I1djGqHD4D2niBvriWZuOWzUoHMNDRMLGzmaL4nRRJFvseX2E-KF9lceHQDcGrcJesW~arYXydmsaXvH7KtgdC-Wuu10VH~--rU9Ge4pjlGA9IAW8jG7vSOoefqDuCrRuEK~nsxWXlKYDowwELrZ6gLvMmjeyvQE3bwLUxq3kn087bGMCCzW6B4AgpzGx4XCy2P6bsKbmF1ZDO4uJDH2dDNljFTqRnQoH7weVc1Mvv7lmVOx8Tdc6vXxrEoyvnk7mznJi0hebAPtbnN0ueO55toyIMtr-vJ7XiDKvdl2xqWc41K6YvEYjw~drHA__" alt="">
-            <img src="https://s3-alpha-sig.figma.com/img/1d7f/d134/6c15ed8a600defaead1a38c16f4865b4?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Qw6RNFw9BnDB0SuZAl392MfzDoLXT~AKod4xGq-FDUvMjf31h1d61lkoZtbMtL90Ls-fH3EoSYDTUiqODvnlYhsY8hiDHxZWZWhi6SKN4-iYCIPEgiIqvrwG0JynKg9XDd6YeM3L3bWh48JLRLgDPkJ2euZSziOsWjEUbd5a0XZG6irmy7WWiIYrO50Zpc5dD7ugsMwjDjVR473o3ihig-eiCwMWzdRHE4H35dH3vCzRL9~l5FGDeN8e-KFldH9otuSzEO~TE5qJ3PjfbL-foe8J7n9DeVQ9jeardWeJdoW5XOptid~XlDHGC5hQy16GnieY-xYZNk6Ww9aQrfMQOQ__" alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/a71f/a31c/036fa4ebdb97754279e6264a8511c26a?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=l4tA6XyG-JLP9roljLYJ7y9iFDzR6fC2-rWROw53RM-E5D6D-lhwrudVvTsRAYTKhSB7EJNMMkg5NSUsdUrdQ95~eaz11XdWQi63-cNrS9UzU1d4FB4LrmIr~F0BOIPaCe6HQNh6nOPy1LXTXmxc4GUeFE~6rLBjIFC~Y5AJqhqKjvv-tUqp6kFw0XkX0hdK7d1NZY3au0vzn1lClafUog4efKYi01hLdjRyitVrUNRJRswoS7hFhA8e0-M7DYb0CJvdaiV5Iw02dcwMjWugGd9OVinH2UXCuY8TgN9LqNGrxEtd~nUpZqZiwbEkvAecIiTfR72WnsQrfyeZnexMYg__"
+                alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/db36/aaca/82598e5bda6c9c5f658e107bf65ba1d7?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=LXHwnKhAS88YoUTDyynxDpHtnvrTl5lC0wIKR1jHhebsHKBQyGCSxyD-kAVHBiiFP5pZkqNnG3xKxj-1yLkoMcUB4ffjoLo7C~3L8aJeDQoFLqNq6ydFXMmkGP36-mJ0-YqzEkZyJGBErg1z8bmsqia6tYBOErCJPZUXCXYs1TVnqFlLw6V1l38p~iznr~OMFwZ5g-Cqvv8Karx73CMF7560ybNMTRbXyUs2Lz6-K6KpwFwyvlmdfstT6Q4BqbbD467Eq0kPoVcPjBrXycz9I8RzQQosut6EVC1C5WYNsHMWdfQT3eZjyKuKqzODzEJby5Iye2KACWhi63GNHB5msQ__"
+                alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/be41/7f8f/4a4fba5b07e121fa3629ad77ae6fc34e?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pikTEanZqvm4HwNmfP5E1o9bo3hyL5m42D0ld3WrEVLZ322gZ0dsGz9DmZqtQMjUCiDo~JdEObZWFGtd2XLB2bc7R12qckrugxt0WtQrClTX7fLBnAB7tVDcAMuwyvJvpntyIiUDvyZU6Ff4Zn~NKuermYrIa2GY7kcnQJMdg7wEXR-lAxIF0phE45gAzXRkJCTQVYED0aO2IcSErgO1XjzLsM9427Bj6TwbRRsDM-PHIcayA4Dh-ThLWfmohf21G3N62BvZWFGldun8Y06HkwgxGnlq3A5Y1eJ2CzTgA7lidNNABDwaJT9VNO~qZrZhrQoroJlb6JaGvAUPmSrI2w__"
+                alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/ea1a/5eff/645c361b0334116505e94e03c8d1133b?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PsGeSHGxClghwLDZas6J4WSSMj2I1djGqHD4D2niBvriWZuOWzUoHMNDRMLGzmaL4nRRJFvseX2E-KF9lceHQDcGrcJesW~arYXydmsaXvH7KtgdC-Wuu10VH~--rU9Ge4pjlGA9IAW8jG7vSOoefqDuCrRuEK~nsxWXlKYDowwELrZ6gLvMmjeyvQE3bwLUxq3kn087bGMCCzW6B4AgpzGx4XCy2P6bsKbmF1ZDO4uJDH2dDNljFTqRnQoH7weVc1Mvv7lmVOx8Tdc6vXxrEoyvnk7mznJi0hebAPtbnN0ueO55toyIMtr-vJ7XiDKvdl2xqWc41K6YvEYjw~drHA__"
+                alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/1d7f/d134/6c15ed8a600defaead1a38c16f4865b4?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Qw6RNFw9BnDB0SuZAl392MfzDoLXT~AKod4xGq-FDUvMjf31h1d61lkoZtbMtL90Ls-fH3EoSYDTUiqODvnlYhsY8hiDHxZWZWhi6SKN4-iYCIPEgiIqvrwG0JynKg9XDd6YeM3L3bWh48JLRLgDPkJ2euZSziOsWjEUbd5a0XZG6irmy7WWiIYrO50Zpc5dD7ugsMwjDjVR473o3ihig-eiCwMWzdRHE4H35dH3vCzRL9~l5FGDeN8e-KFldH9otuSzEO~TE5qJ3PjfbL-foe8J7n9DeVQ9jeardWeJdoW5XOptid~XlDHGC5hQy16GnieY-xYZNk6Ww9aQrfMQOQ__"
+                alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/242a/9bf2/8b8a5921720efadf81e90807bfa58fa1?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Fm84quluEw6~6WiZL-PBVFJx76c3nf-PJmLriWHHms0C1CV7z1f8LKgcqa1DIOPfkpJv-rWF0TmrzhtE0qWdg8y6jsjl2d4GYLJwzWzDlZDztcRY~edLavvj1GE1rPf4fUynOKusUI0N19L-yjkHWa4Pi2kKhJvmXIZwyv-9BLgmr7xbgkwLiH4NN0GJ84fP8FkmiSIkvNnRBQyzXmYuGPhflkhz7U1B6N2IppIoihQyOrcmankiIB9Wyl0JvGAa8dAAq1GInvZo9C7mm~OP08AfFXz0lixjU7zeEXWJ1xcRVdn44OiP5zsINMU4NmhKhaHin874tOOy56csJsVt-w__"
+                alt="">
+            <img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/099f/8da4/7a2ac5fc1779284fa80d7bec89b83d94?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Iz0CMDfrbtrR8yhMKjEOAH14mpohZ6ITIhJlCSu0ClbU7yZcCH4DnOSdnJruvXgasyvgp1Izjx9TD9GsVeaGD6BOIeI8pefZmFtVy2tvpaFeQSSUmttyNvUgijXMvqZf1T7k2vknyUHMHmcT6D6C8bcGIPu7MsQS-P-CceP7EzdW6jkMVIBwIhkSQ0ff3jH~AmV6W53u3qApQsUnEAL8i8r7AXSMob85n-pdEEVP0er4cCJMcEQy2RH7R5PH9U3dgbBIFfMyBrVd1231HFIQfVM6ak1Po04NDhgb85RKU2dpMqxJxuMMFcIv~-kfKKYSkGvbDLomrI0l66pusFpkCw__"
+                alt=""><img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/d070/9626/5011cf147260adb879fb2c383c774acc?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Uj80-u1iaqYraxxv4xgu1HgcVyYZCtzxXLdW5dEJXcqh-EtnFTbof~JNgkPLjoX4S3FDtWJ7dp~p-n1Ct50jgAIBE-b3vBpcKWGtMmEMJIGeOjWBUS1NMLgDo1j3M20wtYF0kzdXz6aaf0xdydN2FZP-uXBe~eIUfgTuMpNG9cI0Fr6YXCkovg-VPgXoOx0cZwI-~Jx8vnynsSWEVDSXO5CP~QKDdWnjQ1J0h6nSIB2F8M5FlcqfnJ2qLWfYDfK-WhE3nXVJ11EZubQW4lTL80O3Mfu3~oKQwrcXtHPabOMSPun-s~Q~Cb~sXkystrtbEM8GxuKgHuFkJcnpI6jwSQ__"
+                alt=""><img class="fly-me"
+                src="https://s3-alpha-sig.figma.com/img/a962/32d2/cffc7341eddba9393942d27673a1bb78?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=bF8aFTQAZTXz9ZKx9ixfmXs1~Gp4IknUy24xJpGCtm6s1L2j9Py~JH3fyg1Bsyd5jjs5WiSqWBhwNLXUt7p~0gf~idwIY4OPHezE9R0Gb7yOVLL79mNErZAl3cdJhoR6FVnqZZau-CXEwwOXnw6a~DhSRktQLRKeNDnLBNIH9LaqMgXLJqDyqRSzwAVqhd4NIVSbNjAiv64ptblybQBCyKNFmH5lLalNzCyq7W4esPMEvfYKvUtrYBzjQWVTnbPwP-~ekx2vXKwLhvfaICm~f6Eh7Tn-EkHFrQaoziqBH0lseCIxrAZJdDJczeVkiqQCBTBfWuZcKJaN71PrJW1hUw__"
+                alt="">
+        </div>
+    </section>
+
+    <section class="news">
+        <div class="more">
+            <img class="fitness" src="assets/fitness.png" alt="">
+            <img class="" src="assets/r&b2.png" alt="">
+            <img class="fitness" src="assets/tatum.png" alt="">
+            <img class="fitness" src="assets/fit2.png" alt="">
+            <img class="fitness" src="assets/fit3.png" alt="">
         </div>
     </section>
 </body>
