img tagaar jijig zurag oruulah asuudal

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
             </li>
         </ul>
     </header>
+
     <div id="sub-header">
         <p>We’re donating $5 to the Global Fund for every purchase made with Apple Pay at Apple. Through 12/8.<a
                 id="main-a" href="#">Shop</a></p>
     </div>
-    <section id="main-pic">
+
+    <section class="main-pic">
         <div class="main-div">
             <h5>iPhone 16 Pro</h5>
             <p class="main-p">Hello, Apple Intelligence.</p>
@@ -43,7 +45,8 @@
             <button class="but-2">Buy</button>
         </div>
     </section>
-    <section id="iphone16">
+
+    <section class="iphone16">
         <div class="main-div">
             <h5>iPhone 16</h5>
             <p class="main-p">Hello, Apple Intelligence.</p>
@@ -52,7 +55,7 @@
         </div>
     </section>
 
-    <section id="gift">
+    <section class="gift">
         <div id="gift-div">
             <h6 class="gift-h6">Gift magic.</h6>
             <p class="main-p">Make their holiday wish come true.</p>
@@ -61,53 +64,43 @@
     </section>
 
     <section id="sub-sect">
-        <div class="sub-sect-div" id="ipad">
-            <div class="main-div">
-                <img class="ipad-air" src="assets/ipad-air.png" alt="">
+        <div class="grid-container">
+            <div class="ipad size1 i-watch image">
+                <picture>
+                    <source media="(max-width:390px)" srcset="./assets/sm-ipad.png" />
+                <img class="pictu" src="./assets/ipad-air.png" alt=""></picture>
                 <p class="ipad-p">Two sizes. Faster chip. Does it all.</p>
                 <button class="button">Learn more</button>
                 <button class="but-2">Buy</button>
             </div>
-            <div class="ipad-hello">
-                <p class="ipad-air-hello">Hello, Apple Intelligence.</p>
-            </div>
-        </div>
-        <div class="sub-sect-div airpod aipods-pro-div">
-            <div class="main-div">
-                <h5 class="aipods-pro">AirPods Pro 2</h5>
+            <div class="airpod-pic size1 flex image">
+                <h6 class="h5 airpods-pro airpods-p">AirPods Pro 2</h6>
                 <p class="ipad-p airpods-p">Now with a Hearing Aid feature.2</p>
                 <button class="button">Learn more</button>
                 <button class="but-2">Buy</button>
             </div>
-        </div>
-        <div class="sub-sect-div watch">
-            <div class="main-div i-watch">
-                <img src="assets/apple-watch.png" alt="">
+            <div class="watch image size1 i-watch">
+                <img class="pictu" src="./assets/apple-watch.png" alt="">
                 <p class="ipad-p">Thinstant classic.</p>
                 <button class="button">Learn more</button>
                 <button class="but-2">Buy</button>
             </div>
-        </div>
-        <div class="sub-sect-div macbook">
-            <div class="main-div mac-div i-watch">
-                <h6 class="gift-h6">MacBook Air</h6>
+            <div class="macbook image size1 i-watch">
+                <h6 class="h5 airpods-pro">MacBook Air</h6>
                 <p class="ipad-p">Lean. Mean. M3 machine.</p>
                 <button class="button">Learn more</button>
                 <button class="but-2">Buy</button>
             </div>
-        </div>
-        <div class="sub-sect-div trade-in">
-            <div class="main-div i-watch">
-                <img src="assets/trade.png" alt="">
-                <p class="ipad-p trade-p">Get $180–$650 in credit when you <br /> trade in iPhone 12 or higher.3
-                </p>
+            <div class="trade-in image size1 i-watch">
+                <img class="pictu" src="./assets/trade.png" alt="">
+                <p class="ipad-p">Get $180–$650 in credit when you <br>
+                    trade in iPhone 12 or higher.3</p>
                 <button class="button">Get your estimate</button>
             </div>
-        </div>
-        <div class="sub-sect-div card">
-            <div class="main-div i-watch">
-                <img src="assets/apple-card.png" alt="">
-                <p class="ipad-p trade-p">Get up to 3% Daily Cash back <br /> with every purchase.</p>
+            <div class="card image size1 i-watch">
+                <img src="./assets/apple-card.png" alt="">
+                <p class="ipad-p">Get up to 3% Daily Cash back <br>
+                    with every purchase.</p>
                 <button class="button">Learn more</button>
                 <button class="but-2">Apply now</button>
             </div>
