--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
 
     <section id="sub-sect">
         <div class="grid-container">
-            <div class="ipad size1 i-watch image">
-                <picture>
-                    <source media="(max-width:390px)" srcset="./assets/sm-ipad.png" />
-                <img class="pictu" src="./assets/ipad-air.png" alt=""></picture>
-                <p class="ipad-p">Two sizes. Faster chip. Does it all.</p>
-                <button class="button">Learn more</button>
-                <button class="but-2">Buy</button>
+            <div class="ipad size1 i-watch">
+                <img class="pictu" src="./assets/ipad-air.png" alt="">
+
+                <div>
+                    <p class="ipad-p">Two sizes. Faster chip. Does it all.</p>
+                    <button class="button">Learn more</button>
+                    <button class="but-2">Buy</button>
+                </div>
             </div>
             <div class="airpod-pic size1 flex image">
                 <h6 class="h5 airpods-pro airpods-p">AirPods Pro 2</h6>
