--- a/store.html
+++ b/store.html
@@ -354,9 +354,9 @@
                 </div>
                 <div class="per-pic only-apple-card-2 padd-2">
                     <h6 class="wonders-p per-card-h6">Get gifts in time for the <br>
-                    holidays with two-hour <br>
-                    delivery,² free delivery, <br>
-                    or easy pickup.</h6>
+                        holidays with two-hour <br>
+                        delivery,² free delivery, <br>
+                        or easy pickup.</h6>
                     <p class="apple-p-2">APPLE TRADE IN</p>
                 </div>
             </div>
@@ -372,7 +372,7 @@
                         Apple Music free.</h6>
                     <p class="apple-p-2">APPLE TRADE IN</p>
                     <p class="apple-exp-card-1-p1">Included with the purchase of<br>
-                    select Apple devices.</p>
+                        select Apple devices.</p>
                 </div>
                 <div class="per-pic apple-exp-card-2">
                     <h6 class="wonders-p per-card-h6 col">Get 3 months free when you buy
@@ -381,45 +381,47 @@
                 </div>
                 <div class="per-pic apple-exp-card-3 padd-2">
                     <h6 class="wonders-p per-card-h6">Six Apple services.<br>
-                    One easy subscription.</h6>
+                        One easy subscription.</h6>
                 </div>
-        </div>
-        <div>
-            <div class="wonder">
-                <h6 class="wonders-p wonders-h6">Special Savings.</h6>
-                <h6 class="wonders-p wonders-h6-2">iPhone carrier deals and exclusive savings for school,businesses, and more.</h6>
             </div>
-            <div class="dis">
-                <div class="per-pic special-card-1 spe padd">
-                    <h6 class="wonders-p per-card-h6">Apple. Your one‑stop shop<br>
-                    for incredible carrier deals.</h6>
-                    <p class="apple-p-2">CARRIER DEALS</p>
-                    <p class="apple-exp-card-1-p1">Get up to $1000 in credit on a new iPhone<br>
-                    with AT&T, Boost Mobile, T‑Mobile, or<br>
-                    Verizon. Trade‑in may be required.⁴</p>
-                </div>
-                <div class="per-pic special-card-2 spe">
-                    <h6 class="wonders-p per-card-h6">Buy a new Mac or iPad with<br>
-                    education savings.</h6>
-                    <p class="apple-p-2">EDUCATION</p>
-                </div>
-                <div class="per-pic special-card-4 spe padd-2">
-                    <h6 class="wonders-p per-card-h6 col">From enterprise to small<br>
-                    business, we’ll work with<br>
-                    you.</h6>
-                    <p class="apple-p-2">BUSINESS</p>
-                </div>
-        </div>
-        <div class="wonder">
             <div>
-             <h6 class="wonders-p">Quick Links</h6></div>
-             <div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-             </div>
-        </div>
+                <div class="wonder">
+                    <h6 class="wonders-p wonders-h6">Special Savings.</h6>
+                    <h6 class="wonders-p wonders-h6-2">iPhone carrier deals and exclusive savings for school,businesses,
+                        and more.</h6>
+                </div>
+                <div class="dis">
+                    <div class="per-pic special-card-1 spe padd">
+                        <h6 class="wonders-p per-card-h6">Apple. Your one‑stop shop<br>
+                            for incredible carrier deals.</h6>
+                        <p class="apple-p-2">CARRIER DEALS</p>
+                        <p class="apple-exp-card-1-p1">Get up to $1000 in credit on a new iPhone<br>
+                            with AT&T, Boost Mobile, T‑Mobile, or<br>
+                            Verizon. Trade‑in may be required.⁴</p>
+                    </div>
+                    <div class="per-pic special-card-2 spe">
+                        <h6 class="wonders-p per-card-h6">Buy a new Mac or iPad with<br>
+                            education savings.</h6>
+                        <p class="apple-p-2">EDUCATION</p>
+                    </div>
+                    <div class="per-pic special-card-4 spe padd-2">
+                        <h6 class="wonders-p per-card-h6 col">From enterprise to small<br>
+                            business, we’ll work with<br>
+                            you.</h6>
+                        <p class="apple-p-2">BUSINESS</p>
+                    </div>
+                </div>
+                <div class="wonder">
+                    <div>
+                        <h6 class="wonders-p size-2">Quick Links</h6>
+                    </div>
+                </div>
+                <div class="end-div">
+                    <div class="end">Order Status</div>
+                    <div class="end">Shopping Help</div>
+                    <div class="end">Returns</div>
+                    <div class="end">Your Saves</div>
+                </div>
 </body>
 
 </html>
